@@ -4,7 +4,8 @@ export(RcppExample,
        print.RcppExample,
        RcppDateExample,
        RcppParamsExample,
-       RcppVectorExample 
+       RcppVectorExample,
+       RcppMatrixExample
 )
 
 #importFrom( utils, capture.output )
